vcalc/src/VcalcLPParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g 2014-10-07 19:27:36

  import SymTab.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class VcalcLPParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM", "DECL", "CSTAT", "GEN", "DREF", "IDENT", "EQUAL", "SC", "IN", "LP", "RP", "INTEGER", "LETTER", "DIGIT", "LB", "RB", "WS", "'fi'", "'if'", "'loop'", "'pool'", "'print'", "'filter'", "'=='", "'!='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'['", "']'", "'..'", "'|'"
    };
    public static final int EOF=-1;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int PROGRAM=4;
    public static final int DECL=5;
    public static final int CSTAT=6;
    public static final int GEN=7;
    public static final int DREF=8;
    public static final int IDENT=9;
    public static final int EQUAL=10;
    public static final int SC=11;
    public static final int IN=12;
    public static final int LP=13;
    public static final int RP=14;
    public static final int INTEGER=15;
    public static final int LETTER=16;
    public static final int DIGIT=17;
    public static final int LB=18;
    public static final int RB=19;
    public static final int WS=20;

    // delegates
    // delegators


        public VcalcLPParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public VcalcLPParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[49+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return VcalcLPParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g"; }


      SymbolTable symtab;


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:28:1: program[SymbolTable symtab] : ( declaration )* ( statement )* -> ^( PROGRAM ( declaration )* ( statement )* ) ;
    public final VcalcLPParser.program_return program(SymbolTable symtab) throws RecognitionException {
        VcalcLPParser.program_return retval = new VcalcLPParser.program_return();
        retval.start = input.LT(1);
        int program_StartIndex = input.index();
        Object root_0 = null;

        VcalcLPParser.declaration_return declaration1 = null;

        VcalcLPParser.statement_return statement2 = null;


        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        this.symtab = symtab;
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:30:3: ( ( declaration )* ( statement )* -> ^( PROGRAM ( declaration )* ( statement )* ) )
            // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:30:5: ( declaration )* ( statement )*
            {
            // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:30:5: ( declaration )*
            loop1:
            do {
                int alt1=2;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:0:0: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_program104);
            	    declaration1=declaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_declaration.add(declaration1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:30:18: ( statement )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==IDENT||LA2_0==IN||(LA2_0>=21 && LA2_0<=26)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program107);
            	    statement2=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_statement.add(statement2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);



            // AST REWRITE
            // elements: statement, declaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 30:29: -> ^( PROGRAM ( declaration )* ( statement )* )
            {
                // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:30:32: ^( PROGRAM ( declaration )* ( statement )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:30:42: ( declaration )*
                while ( stream_declaration.hasNext() ) {
                    adaptor.addChild(root_1, stream_declaration.nextTree());

                }
                stream_declaration.reset();
                // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:30:55: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class declaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declaration"
    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:33:1: declaration : type assignment -> ^( DECL type assignment ) ;
    public final VcalcLPParser.declaration_return declaration() throws RecognitionException {
        VcalcLPParser.declaration_return retval = new VcalcLPParser.declaration_return();
        retval.start = input.LT(1);
        int declaration_StartIndex = input.index();
        Object root_0 = null;

        VcalcLPParser.type_return type3 = null;

        VcalcLPParser.assignment_return assignment4 = null;


        RewriteRuleSubtreeStream stream_assignment=new RewriteRuleSubtreeStream(adaptor,"rule assignment");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:35:3: ( type assignment -> ^( DECL type assignment ) )
            // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:35:5: type assignment
            {
            pushFollow(FOLLOW_type_in_declaration134);
            type3=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type3.getTree());
            pushFollow(FOLLOW_assignment_in_declaration136);
            assignment4=assignment();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_assignment.add(assignment4.getTree());


            // AST REWRITE
            // elements: assignment, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 35:21: -> ^( DECL type assignment )
            {
                // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:35:24: ^( DECL type assignment )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECL, "DECL"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_assignment.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, declaration_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "declaration"

    public static class assignment_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assignment"
    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:37:1: assignment : ( IDENT EQUAL expr SC -> ^( EQUAL IDENT expr ) | 'fi' | IN | 'if' | 'loop' | 'pool' | 'print' | 'filter' );
    public final VcalcLPParser.assignment_return assignment() throws RecognitionException {
        VcalcLPParser.assignment_return retval = new VcalcLPParser.assignment_return();
        retval.start = input.LT(1);
        int assignment_StartIndex = input.index();
        Object root_0 = null;

        Token IDENT5=null;
        Token EQUAL6=null;
        Token SC8=null;
        Token string_literal9=null;
        Token IN10=null;
        Token string_literal11=null;
        Token string_literal12=null;
        Token string_literal13=null;
        Token string_literal14=null;
        Token string_literal15=null;
        VcalcLPParser.expr_return expr7 = null;


        Object IDENT5_tree=null;
        Object EQUAL6_tree=null;
        Object SC8_tree=null;
        Object string_literal9_tree=null;
        Object IN10_tree=null;
        Object string_literal11_tree=null;
        Object string_literal12_tree=null;
        Object string_literal13_tree=null;
        Object string_literal14_tree=null;
        Object string_literal15_tree=null;
        RewriteRuleTokenStream stream_SC=new RewriteRuleTokenStream(adaptor,"token SC");
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_EQUAL=new RewriteRuleTokenStream(adaptor,"token EQUAL");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:38:3: ( IDENT EQUAL expr SC -> ^( EQUAL IDENT expr ) | 'fi' | IN | 'if' | 'loop' | 'pool' | 'print' | 'filter' )
            int alt3=8;
            switch ( input.LA(1) ) {
            case IDENT:
                {
                alt3=1;
                }
                break;
            case 21:
                {
                alt3=2;
                }
                break;
            case IN:
                {
                alt3=3;
                }
                break;
            case 22:
                {
                alt3=4;
                }
                break;
            case 23:
                {
                alt3=5;
                }
                break;
            case 24:
                {
                alt3=6;
                }
                break;
            case 25:
                {
                alt3=7;
                }
                break;
            case 26:
                {
                alt3=8;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:38:5: IDENT EQUAL expr SC
                    {
                    IDENT5=(Token)match(input,IDENT,FOLLOW_IDENT_in_assignment162); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_IDENT.add(IDENT5);

                    if ( state.backtracking==0 ) {

                          if ((IDENT5!=null?IDENT5.getText():null).equals("int") || (IDENT5!=null?IDENT5.getText():null).equals("vector")) {
                            System.err.println("Sanity Error: Line<" + input.get(input.index()).getLine() + ":" + input.get(input.index()).getCharPositionInLine() + ">" + "'" + (IDENT5!=null?IDENT5.getText():null) + "' is not a valid name");
                            System.exit(-1);
                          }
                        
                    }
                    EQUAL6=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_assignment166); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_EQUAL.add(EQUAL6);

                    pushFollow(FOLLOW_expr_in_assignment168);
                    expr7=expr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_expr.add(expr7.getTree());
                    SC8=(Token)match(input,SC,FOLLOW_SC_in_assignment170); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_SC.add(SC8);



                    // AST REWRITE
                    // elements: EQUAL, expr, IDENT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 43:19: -> ^( EQUAL IDENT expr )
                    {
                        // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:43:22: ^( EQUAL IDENT expr )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_EQUAL.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_IDENT.nextNode());
                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:44:5: 'fi'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal9=(Token)match(input,21,FOLLOW_21_in_assignment186); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    string_literal9_tree = (Object)adaptor.create(string_literal9);
                    adaptor.addChild(root_0, string_literal9_tree);
                    }
                    if ( state.backtracking==0 ) {
                      System.err.println("Sanity Error: Line<" + input.get(input.index()).getLine() + ":" + input.get(input.index()).getCharPositionInLine() + ">" + "'fi' is not a valid name"); System.exit(-1);
                    }

                    }
                    break;
                case 3 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:45:5: IN
                    {
                    root_0 = (Object)adaptor.nil();

                    IN10=(Token)match(input,IN,FOLLOW_IN_in_assignment194); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IN10_tree = (Object)adaptor.create(IN10);
                    adaptor.addChild(root_0, IN10_tree);
                    }
                    if ( state.backtracking==0 ) {
                      System.err.println("Sanity Error: Line<" + input.get(input.index()).getLine() + ":" + input.get(input.index()).getCharPositionInLine() + ">" + "'in' is not a valid name"); System.exit(-1);
                    }

                    }
                    break;
                case 4 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:46:5: 'if'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal11=(Token)match(input,22,FOLLOW_22_in_assignment202); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    string_literal11_tree = (Object)adaptor.create(string_literal11);
                    adaptor.addChild(root_0, string_literal11_tree);
                    }
                    if ( state.backtracking==0 ) {
                      System.err.println("Sanity Error: Line<" + input.get(input.index()).getLine() + ":" + input.get(input.index()).getCharPositionInLine() + ">" + "'if' is not a valid name"); System.exit(-1);
                    }

                    }
                    break;
                case 5 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:47:5: 'loop'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal12=(Token)match(input,23,FOLLOW_23_in_assignment210); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    string_literal12_tree = (Object)adaptor.create(string_literal12);
                    adaptor.addChild(root_0, string_literal12_tree);
                    }
                    if ( state.backtracking==0 ) {
                      System.err.println("Sanity Error: Line<" + input.get(input.index()).getLine() + ":" + input.get(input.index()).getCharPositionInLine() + ">" + "'loop' is not a valid name"); System.exit(-1);
                    }

                    }
                    break;
                case 6 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:48:5: 'pool'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal13=(Token)match(input,24,FOLLOW_24_in_assignment218); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    string_literal13_tree = (Object)adaptor.create(string_literal13);
                    adaptor.addChild(root_0, string_literal13_tree);
                    }
                    if ( state.backtracking==0 ) {
                      System.err.println("Sanity Error: Line<" + input.get(input.index()).getLine() + ":" + input.get(input.index()).getCharPositionInLine() + ">" + "'pool' is not a valid name"); System.exit(-1);
                    }

                    }
                    break;
                case 7 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:49:5: 'print'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal14=(Token)match(input,25,FOLLOW_25_in_assignment226); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    string_literal14_tree = (Object)adaptor.create(string_literal14);
                    adaptor.addChild(root_0, string_literal14_tree);
                    }
                    if ( state.backtracking==0 ) {
                      System.err.println("Sanity Error: Line<" + input.get(input.index()).getLine() + ":" + input.get(input.index()).getCharPositionInLine() + ">" + "'print' is not a valid name"); System.exit(-1);
                    }

                    }
                    break;
                case 8 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:50:5: 'filter'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal15=(Token)match(input,26,FOLLOW_26_in_assignment234); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    string_literal15_tree = (Object)adaptor.create(string_literal15);
                    adaptor.addChild(root_0, string_literal15_tree);
                    }
                    if ( state.backtracking==0 ) {
                      System.err.println("Sanity Error: Line<" + input.get(input.index()).getLine() + ":" + input.get(input.index()).getCharPositionInLine() + ">" + "'filter' is not a valid name"); System.exit(-1);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, assignment_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "assignment"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:53:1: statement : ( ifStatement | loopStatement | printStatement | assignment );
    public final VcalcLPParser.statement_return statement() throws RecognitionException {
        VcalcLPParser.statement_return retval = new VcalcLPParser.statement_return();
        retval.start = input.LT(1);
        int statement_StartIndex = input.index();
        Object root_0 = null;

        VcalcLPParser.ifStatement_return ifStatement16 = null;

        VcalcLPParser.loopStatement_return loopStatement17 = null;

        VcalcLPParser.printStatement_return printStatement18 = null;

        VcalcLPParser.assignment_return assignment19 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:54:3: ( ifStatement | loopStatement | printStatement | assignment )
            int alt4=4;
            switch ( input.LA(1) ) {
            case 22:
                {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==LP) ) {
                    alt4=1;
                }
                else if ( (LA4_1==EOF||LA4_1==IDENT||LA4_1==IN||(LA4_1>=21 && LA4_1<=26)) ) {
                    alt4=4;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
                }
                break;
            case 23:
                {
                int LA4_2 = input.LA(2);

                if ( (LA4_2==LP) ) {
                    alt4=2;
                }
                else if ( (LA4_2==EOF||LA4_2==IDENT||LA4_2==IN||(LA4_2>=21 && LA4_2<=26)) ) {
                    alt4=4;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae;
                }
                }
                break;
            case 25:
                {
                int LA4_3 = input.LA(2);

                if ( (LA4_3==LP) ) {
                    alt4=3;
                }
                else if ( (LA4_3==EOF||LA4_3==IDENT||LA4_3==IN||(LA4_3>=21 && LA4_3<=26)) ) {
                    alt4=4;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 3, input);

                    throw nvae;
                }
                }
                break;
            case IDENT:
            case IN:
            case 21:
            case 24:
            case 26:
                {
                alt4=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:54:5: ifStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ifStatement_in_statement252);
                    ifStatement16=ifStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, ifStatement16.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:55:5: loopStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_loopStatement_in_statement258);
                    loopStatement17=loopStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, loopStatement17.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:56:5: printStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_printStatement_in_statement264);
                    printStatement18=printStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, printStatement18.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:57:5: assignment
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assignment_in_statement270);
                    assignment19=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment19.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, statement_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class ifStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ifStatement"
    // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:59:1: ifStatement : 'if' LP expr RP cstat 'fi' SC -> ^( 'if' expr cstat ) ;
    public final VcalcLPParser.ifStatement_return ifStatement() throws RecognitionException {
        VcalcLPParser.ifStatement_return retval = new VcalcLPParser.ifStatement_return();
        retval.start = input.LT(1);
        int ifStatement_StartIndex = input.index();
        Object root_0 = null;

        Token string_literal20=null;
        Token LP21=null;
        Token RP23=null;
        Token string_literal25=null;
        Token SC26=null;
        VcalcLPParser.expr_return expr22 = null;

        VcalcLPParser.cstat_return cstat24 = null;


        Object string_literal20_tree=null;
        Object LP21_tree=null;
        Object RP23_tree=null;
        Object string_literal25_tree=null;
        Object SC26_tree=null;
        RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
        RewriteRuleTokenStream stream_SC=new RewriteRuleTokenStream(adaptor,"token SC");
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_RP=new RewriteRuleTokenStream(adaptor,"token RP");
        RewriteRuleTokenStream stream_LP=new RewriteRuleTokenStream(adaptor,"token LP");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_cstat=new RewriteRuleSubtreeStream(adaptor,"rule cstat");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:60:3: ( 'if' LP expr RP cstat 'fi' SC -> ^( 'if' expr cstat ) )
            // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:60:5: 'if' LP expr RP cstat 'fi' SC
            {
            string_literal20=(Token)match(input,22,FOLLOW_22_in_ifStatement283); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_22.add(string_literal20);

            LP21=(Token)match(input,LP,FOLLOW_LP_in_ifStatement285); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LP.add(LP21);

            pushFollow(FOLLOW_expr_in_ifStatement287);
            expr22=expr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_expr.add(expr22.getTree());
            RP23=(Token)match(input,RP,FOLLOW_RP_in_ifStatement289); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RP.add(RP23);

            pushFollow(FOLLOW_cstat_in_ifStatement291);
            cstat24=cstat();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_cstat.add(cstat24.getTree());
            string_literal25=(Token)match(input,21,FOLLOW_21_in_ifStatement293); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_21.add(string_literal25);

            SC26=(Token)match(input,SC,FOLLOW_SC_in_ifStatement295); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_SC.add(SC26);



            // AST REWRITE
            // elements: cstat, expr, 22
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 60:35: -> ^( 'if' expr cstat )
            {
                // C:\\Users\\Lyle\\workspace\\vcalc\\src\\VcalcLP.g:60:38: ^( 'if' expr cstat )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_22.nextNode(), root_1);

                adaptor.addChild(root_1, stream_expr.nextTree());
                adaptor.addChild(root_1, stream_cstat.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }
